Change name of application

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "osynapsy.org/osynapsy",
+    "name": "osynapsy.net/osynapsy",
     "version": "0.5.0",
-    "homepage": "http://www.osynapsy.org/",
+    "homepage": "http://www.osynapsy.net/",
     "type": "library",
     "description": "Osynapsy is a framework MVC for develop Rich Internet Application (RIA).",
     "keywords": ["Framework","Rich application","MVC"],
@@ -9,8 +9,8 @@
     "authors": [
         {
             "name": "Pietro Celeste",
-            "email": "p.celeste@osynapsy.org",
-            "homepage": "https://github.com/osynapsy/osy/wiki"
+            "email": "p.celeste@osynapsy.net",
+            "homepage": "https://github.com/osynapsy/osynapsy/wiki"
         }
     ],
     "require": {
