--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "osynapsy.net/osynapsy",
     "version": "0.5.0",
-    "homepage": "http://www.osynapsy.net/",
+    "homepage": "http://www.osynapsy.net",
     "type": "library",
     "description": "Osynapsy is a framework MVC for develop Rich Internet Application (RIA).",
     "keywords": ["Framework","Rich application","MVC"],
