--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     },
     "require": {
         "php": ">=7.2.0",        
-        "osynapsy.net/osynapsy-psr7" : "dev-master"
+        "osynapsy.net/osynapsy-psr7" : "@stable",
+        "osynapsy.net/osynapsy-html" : "@stable"
     }    
 }
