Revert "Increased revision number"
This reverts commit 05d52a290d3b4d681baadd37730df518282d2078.

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
     },
     "require": {
         "php": ">=7.2.0",        
-        "osynapsy.net/osynapsy-psr7" : "@stable",
-        "osynapsy.net/osynapsy-html" : "@stable"
+        "osynapsy.net/osynapsy-psr7" : "dev-master"
     }    
 }
