--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "require": {
         "php": ">=7.2.0",        
         "osynapsy.net/osynapsy-psr7" : "@stable",
-        "osynapsy.net/osynapsy-html" : "@stable"
+        "osynapsy.net/osynapsy-html" : "@stable",
+        "osynapsy.net/osynapsy-datastructure" : "@stable"
     }    
 }
