--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "osynapsy.net/osynapsy",
-    "version": "0.9.5",
+    "version": "0.9.6",
     "homepage": "http://www.osynapsy.net",
     "type": "library",
     "description": "Osynapsy is a framework MVC for develop Rich Internet Application (RIA).",
@@ -22,6 +22,7 @@
         "php": ">=7.2.0",        
         "osynapsy.net/osynapsy-psr7" : "@stable",
         "osynapsy.net/osynapsy-html" : "@stable",
-        "osynapsy.net/osynapsy-datastructure" : "@stable"
+        "osynapsy.net/osynapsy-datastructure" : "@stable",
+        "osynapsy.net/osynapsy-database" : "@stable"
     }    
 }
