Change composer package name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "osynapsy.net/osynapsy",
+    "name": "osynapsy/osynapsy-core",
     "version": "0.9.6",
     "homepage": "http://www.osynapsy.net",
     "type": "library",
