--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "osynapsy/osynapsy-core",
-    "version": "0.9.8.1",
+    "version": "0.9.8.2",
     "homepage": "http://www.osynapsy.net",
     "type": "library",
     "description": "Osynapsy is a framework MVC for develop Rich Internet Application (RIA).",
@@ -18,7 +18,7 @@
         "osynapsy/osynapsy-psr7" : "@stable",
         "osynapsy/osynapsy-assert" : "@stable",
         "osynapsy/osynapsy-datastructure" : "@stable",
-        "osynapsy/osynapsy-database" : "@stable",
+        "osynapsy/osynapsy-database" : "0.6",
         "osynapsy/osynapsy-html" : "@stable"
     },
     "autoload" : {
